# computional_physicist_agent_factory

./: .gitignore  Design.md  README.md  factory_ui_design_prompts.md  pyproject.toml  test_models.py
.github/workflows/: ci.yml
config/: budget.yaml
config/council/: lineup.yaml  probes.yaml
config/pricing/: openrouter.yaml
config/selector/: weights.yaml
docs/: ARCHITECTURE.md  DIAGRAMS.md  FIX_PLAN.md  GLOSSARY.md  INDEX.md  ORCHESTRATION.md  SPEC.md  UI_DESIGN.md
docs/prds/: PRD-001-phase-a-mvp.md  PRD-002-council-library.md  PRD-003-first-autonomous-cycle.md  PRD-004-simulator-catalog-v1.md
docs/runbooks/: adapter-writing.md  artifacts-debugging.md  budget-tuning.md  catalog-onboarding.md  council-calibration.md  first-cycle.md  genver-debugging.md  ledger-audit.md  literature-discovery.md  openrouter-client.md  operator-cli.md  state-machine-debugging.md  surrogate-training.md  telemetry-export.md  validation-debugging.md  writer-debugging.md
docs/schemas/: _artifactbase.schema.json  budget.schema.json  councilverdict.schema.json  domainscope.schema.json  evidenceledgerentry.schema.json  experimentspec.schema.json  factorycontrolevent.schema.json  gapcandidate.schema.json  hypothesisspec.schema.json  runreport.schema.json  strategy.schema.json  strategycycleevidence.schema.json  surrogateproberesult.schema.json  validationresult.schema.json
docs/specs/: 001-council.md  002-artifacts.md  003-state-machine.md  004-simulator-catalog.md  005-simulator-selector.md  006-domain-adapter.md  007-literature-discovery.md  008-generator-verifier.md  (+10 more)
factory/: __init__.py  module_contracts.py  module_entrypoint.py
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+366 files in other folders)
